--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>mt</title>
+        <title>61</title>
         <meta charset="utf-8">
     </head>
     <body>
@@ -11,7 +11,5 @@
             <h2><li><a href="rj.html">로줄</a></li></h2>
             <h2><li><a href="d8.html">드팔</a></li></h2>
         </ol>
-
-        마탄의 사수(魔彈-射手, 독일어: Der Freischütz, 영어: The Marksman, The Freeshooter)는 요한 프리드리히 킨트의 대본에 기초한 카를 마리아 폰 베버의 3막짜리 오페라다. 이 작품은 첫 번째로 중요한 독일 낭만 오페라로 여겨진다.
     </body>
 </html>
