--- a/rj.html
+++ b/rj.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1><a href="xmpl.html">61선곡</a></h1>
+        <h1><a href="index.html">61선곡</a></h1>
         <ol>
             <h2><li><a href="mt.html">마탄</a></li></h2>
             <h2><li><a href="rj.html">로줄</a></li></h2>
