--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            
+        </style>
         <title>61</title>
         <meta charset="utf-8">
     </head>
