--- a/rj.html
+++ b/rj.html
@@ -1,8 +1,15 @@
+
 <!DOCTYPE html>
 <html>
     <head>
-        <title>rj</title>
+        <title>mt</title>
         <meta charset="utf-8">
+        <style>
+            .title{
+                color:yellow;
+                font-weight: bold;
+            }
+        </style>
     </head>
     <body>
         <h1><a href="index.html">61선곡</a></h1>
@@ -10,7 +17,22 @@
             <h2><li><a href="mt.html">마탄</a></li></h2>
             <h2><li><a href="rj.html">로줄</a></li></h2>
             <h2><li><a href="d8.html">드팔</a></li></h2>
-            로미오와 줄리엣(영어: Romeo and Juliet, 문화어: 로미오와 쥴리에트)은 윌리엄 셰익스피어의 초기 희곡이다. 서로 원수인 가문에서 태어난 로미오와 줄리엣이 사랑을 하게 되고 그들의 비극적인 죽음이 가문을 화해하게 만드는 이야기이다. 아름다운 대사와 극적 효과로 많은 칭송을 받는 셰익스피어의 대표작 가운데 하나이다. 셰익스피어 당대에서부터 햄릿과 함께 가장 많이 공연되었으며 지금도 여전히 공연되고 있다. 두 주인공은 젊은 연인의 전형으로 자리잡았다.
         </ol>
+        <br>
+        <input type="button" id = "toggle" value="night" onclick="
+        if(document.querySelector('#toggle').value=='night'){
+            document.querySelector('#toggle').value='day';
+            document.querySelector('body').style.color='white';
+            document.querySelector('body').style.backgroundColor='black';
+        }
+        else{
+            document.querySelector('#toggle').value='night';
+            document.querySelector('body').style.color='black';
+            document.querySelector('body').style.backgroundColor='white';
+        }
+        ">
+        <h3> 로줄</h3>
+        <span class="title">로미오와 줄리엣</span>(영어: Romeo and Juliet, 문화어: 로미오와 쥴리에트)은 윌리엄 셰익스피어의 초기 희곡이다. 서로 원수인 가문에서 태어난 로미오와 줄리엣이 사랑을 하게 되고 그들의 비극적인 죽음이 가문을 화해하게 만드는 이야기이다. 아름다운 대사와 극적 효과로 많은 칭송을 받는 셰익스피어의 대표작 가운데 하나이다. 셰익스피어 당대에서부터 햄릿과 함께 가장 많이 공연되었으며 지금도 여전히 공연되고 있다. 두 주인공은 젊은 연인의 전형으로 자리잡았다.
+        
     </body>
 </html>
