--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            
-        </style>
+        <link rel="stylesheet" href="./style.css">
         <title>61</title>
         <meta charset="utf-8">
     </head>
+
     <body>
         <h1><a href="index.html">61선곡</a></h1>
         <ol>
@@ -14,5 +13,9 @@
             <h2><li><a href="rj.html">로줄</a></li></h2>
             <h2><li><a href="d8.html">드팔</a></li></h2>
         </ol>
+        <br>
+        <input type="button" id = "toggle" value="night" onclick="daynightHandler(this)">
+        <h3> 로줄</h3>
+        <script src="func.js"></script>
     </body>
 </html>
